--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "openai": "^4.53.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "python-shell": "^5.0.0"
   }
 }
